// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dropdown renders 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div>
      <div
        class="inline-flex items-center cursor-pointer"
      >
        Open Dropdown 
        <span
          class="flex"
        >
          <svg
            class="fill-current ml-[0.7em] min-w"
            viewBox="3 3 11 11"
          >
            <path
              d="m11.997 5.29.707.707-4 4-.707.707-.707-.707-4-4 .707-.707 4 4 4-4Z"
            />
          </svg>
        </span>
      </div>
    </div>
  </div>
</div>
`;

exports[`Dropdown should render menu 1`] = `
<body>
  <div>
    <div
      class="Picasso-root"
    >
      <div>
        <div
          class="inline-flex items-center cursor-pointer"
        >
          Open Dropdown 
          <span
            class="flex"
          >
            <svg
              class="fill-current ml-[0.7em] min-w"
              viewBox="3 3 11 11"
            >
              <path
                d="m11.997 5.29.707.707-4 4-.707.707-.707-.707-4-4 .707-.707 4 4 4-4Z"
              />
            </svg>
          </span>
        </div>
      </div>
      <div
        class="PicassoPopper-root shadow-2"
        role="tooltip"
        style="position: absolute; top: 0px; left: 0px;"
        x-placement="bottom-end"
      >
        <div>
          <div
            class="shadow-0 transition-shadow duration-300 delay-0 text-[length:inherit] bg-white overflow-y max-h"
            style="opacity: 1; transform: scale(1, 1); transition: opacity 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
          >
            <div>
              <ul
                class="relative list-none outline-none shadow-1 py-2 px-0 m-0 rounded-sm"
                role="menu"
                tabindex="-1"
              >
                <li
                  aria-disabled="false"
                  class="text-black bg-transparent hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
                  role="menuitem"
                  tabindex="0"
                >
                  <div
                    class="flex flex-1 max-w"
                  >
                    <div
                      class="flex flex-col flex-1 min-w"
                    >
                      <div
                        class="flex items-center"
                      >
                        <span
                          class="flex-1 text-md leading-5"
                        >
                          Item1
                        </span>
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  aria-disabled="false"
                  class="text-black bg-transparent hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
                  role="menuitem"
                  tabindex="-1"
                >
                  <div
                    class="flex flex-1 max-w"
                  >
                    <div
                      class="flex flex-col flex-1 min-w"
                    >
                      <div
                        class="flex items-center"
                      >
                        <span
                          class="flex-1 text-md leading-5"
                        >
                          Item2
                        </span>
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  aria-disabled="false"
                  class="text-black bg-transparent hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
                  role="menuitem"
                  tabindex="-1"
                >
                  <div
                    class="flex flex-1 max-w"
                  >
                    <div
                      class="flex flex-col flex-1 min-w"
                    >
                      <div
                        class="flex items-center"
                      >
                        <span
                          class="flex-1 text-md leading-5"
                        >
                          Item3
                        </span>
                      </div>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Dropdown should render menu with focus 1`] = `
<body>
  <div>
    <div
      class="Picasso-root"
    >
      <div
        class=""
      >
        <div>
          <div
            class="inline-flex items-center cursor-pointer"
          >
            Open Dropdown 
            <span
              class="flex"
            >
              <svg
                class="fill-current ml-[0.7em] min-w"
                viewBox="3 3 11 11"
              >
                <path
                  d="m11.997 5.29.707.707-4 4-.707.707-.707-.707-4-4 .707-.707 4 4 4-4Z"
                />
              </svg>
            </span>
          </div>
        </div>
      </div>
      <div
        class="PicassoPopper-root shadow-2"
        role="tooltip"
        style="position: absolute; top: 0px; left: 0px; transform: translate3d(NaNpx, NaNpx, 0); will-change: transform;"
        x-placement="bottom-end"
      >
        <div>
          <div
            class="shadow-0 transition-shadow duration-300 delay-0 text-[length:inherit] bg-white overflow-y max-h"
            style="opacity: 1; transform: scale(1, 1); transition: opacity 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,transform 0ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;"
          >
            <div>
              <ul
                class="relative list-none outline-none shadow-1 py-2 px-0 m-0 rounded-sm"
                role="menu"
                tabindex="-1"
              >
                <li
                  aria-disabled="false"
                  class="text-black bg-transparent hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
                  role="menuitem"
                  tabindex="0"
                >
                  <div
                    class="flex flex-1 max-w"
                  >
                    <div
                      class="flex flex-col flex-1 min-w"
                    >
                      <div
                        class="flex items-center"
                      >
                        <span
                          class="flex-1 text-md leading-5"
                        >
                          Item1
                        </span>
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  aria-disabled="false"
                  class="text-black bg-transparent hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
                  role="menuitem"
                  tabindex="-1"
                >
                  <div
                    class="flex flex-1 max-w"
                  >
                    <div
                      class="flex flex-col flex-1 min-w"
                    >
                      <div
                        class="flex items-center"
                      >
                        <span
                          class="flex-1 text-md leading-5"
                        >
                          Item2
                        </span>
                      </div>
                    </div>
                  </div>
                </li>
                <li
                  aria-disabled="false"
                  class="text-black bg-transparent hover:bg-blue focus:bg-blue px-4 py-[0.375rem] min-w w-auto min-h sm:min-h md:min-h relative cursor-pointer transition-colors duration-150 ease-in overflow-hidden whitespace-normal text-left no-underline flex items-center justify-start outline-none appearance-none leading-4"
                  role="menuitem"
                  tabindex="-1"
                >
                  <div
                    class="flex flex-1 max-w"
                  >
                    <div
                      class="flex flex-col flex-1 min-w"
                    >
                      <div
                        class="flex items-center"
                      >
                        <span
                          class="flex-1 text-md leading-5"
                        >
                          Item3
                        </span>
                      </div>
                    </div>
                  </div>
                </li>
              </ul>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
